--- a/fc19_exchange.tex
+++ b/fc19_exchange.tex
@@ -42,41 +42,11 @@ ISO to have a common document on security of cryptocurrency exchange.
 \end{abstract}
 
 \input{introduction.tex}
-
-
-\section{Investigation and audit to 32 cryptocurrency exchanges}
-\subsection{Security incidents and their history}
-\subsection{Perspectives of investigations}
-\subsection{Results of investigation and audit}
-
-
-
-\section{Analysis of the reality of ``Cryptocurrency Exchanges''}
-\subsection{How do cryptocurrency exchanges introduce themselves and general persons recognize it}
-\subsection{Functionalities which real cryptocurrency exchanges have}
-\subsection{Shortage of security consideration}
-
-
-
-
-
-
-\section{Reconsidering governance and security management}
-\subsection{Threat modeling and security requirements}
-\subsection{Analysis based on governance and security management standard}
-
-
-
-
-\section{Directions and action items to secure cryptocurrency exchanges}
-\subsection{Required technologies}
-\subsection{Required operations}
-\subsection{Standardization}
-
-
-
-
-\section{Conclusion}
+\input{sec2.tex}
+\input{sec3.tex}
+\input{sec4.tex}
+\input{sec5.tex}
+\input{conclusion.tex}
 
 \begin{thebibliography}{21}
 \bibitem{N08} Satoshi Nakamoto, ``Bitcoin: A Peer-to-Peer Electronic Cash System,'' \textit{https://bitcoin.org/bitcoin.pdf}.
